Made bender settingized. Still need sayings and code to randomize phrases as well as (possibly randomly say something). I don't really like the idea of spammy for "fun"

--- a/CsBot.csproj
+++ b/CsBot.csproj
@@ -40,9 +40,12 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel.Web" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandHandler.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="IrcBot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="user.cs" />
