--- a/settings.json
+++ b/settings.json
@@ -29,11 +29,11 @@
         "Hey look {0}! It's that idiotic windbag you slept with!"
     ],
     "quotes": [
-        "I don't tell you how to tell me what to do, so don't tell me how to do what you tell me to do.",
+        "I don't tell you how to tell Be|\\|der what to do, so don't tell Be|\\|der how to do what you tell Be|\\|der to do.",
         "Hey, the blues. The tragic sound of other people's suffering. Thant's kind of a pick-me-up.",
         "Afterlife? If I'd thought I had to go through a whole another life, Id kill myself right now.",
         "Have you ever thought about turning off the TV, sitting down with your children, and hitting them?",
-        "Morgan made me talk to the professor. There we were in the park when suddenly some old lady says I stole her purse. I chucked the professor at her, but she kept comming. So, I had to hit her with this purse I found.",
+        "Morgan made Be|\\|der talk to the professor. There we were in the park when suddenly some old lady says I stole her purse. I chucked the professor at her, but she kept comming. So, I had to hit her with this purse I found.",
         "Who knew a cooler could aslo make a handy wang coffin?",
         "I keep running people over. I'm not famous enough to get away with it.",
         "Yo, Captian Cataract!",
@@ -55,6 +55,6 @@
 	"{0} is the sharpest screw in the box.",
 	"{0}, I guess you can be lovable too.",
 	"{0} just might be famous enough to get away with running people over",
-	"Only {0} can tell me what to do!"
+	"Only {0} can tell Be|\\|der what to do!"
     ]
 }
