--- a/CsBot.csproj
+++ b/CsBot.csproj
@@ -68,10 +68,18 @@
     <Compile Include="CommandHandler.cs" />
     <Compile Include="Command\RssFeedCommand.cs" />
     <Compile Include="Command\Insult.cs" />
+    <Compile Include="Command\Praise.cs" />
+    <Compile Include="Command\Quote.cs" />
+    <Compile Include="Command\APB.cs" />
+    <Compile Include="Command\Caffeine.cs" />
+    <Compile Include="Command\Say.cs" />
+    <Compile Include="Command\Emote.cs" />
+    <Compile Include="Command\StringReplace.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Command\IrcCommand.cs" />
     <Compile Include="Games\Farkle.cs" />
     <Compile Include="Games\RockPaperScissors.cs" />
+    <Compile Include="Games\Roll.cs" />
     <Compile Include="PingSender.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Settings.cs" />
