--- a/CsBot.Tests/CsBot.Tests.csproj
+++ b/CsBot.Tests/CsBot.Tests.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="NUnit" Version="3.13.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\src\CsBot\CsBot.csproj" />
+  </ItemGroup>
+
 </Project>
